--- a/index.html
+++ b/index.html
@@ -5,26 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wdth@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/styles.css" />
 
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="header">
+        <nav class="nav">
+            <a class="nav-logo" href="./index.html">
+                <span class="nav-logo-kolor">Web</span>Studio</a>
+            <ul class="nav-list">
+                <li class="nav-menu-item"><a class="nav-menu-link">Studio</a></li>
+                <li class="nav-menu-item"><a class="nav-menu-link">Portfolio</a></li>
+                <li class="nav-menu-item"><a class="nav-menu-link">Contacts</a></li>
             </ul>
         </nav>
 
-        <address>
-            <ul>
-                <li>
+        <address class="Contacts">
+            <ul class="Contacts-list">
+                <li class="Contacts-item">
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="Contacts-item">
                     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
@@ -32,102 +41,115 @@
 
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="main">
+            <h1 class="main-hero">Effective Solutions for Your Business</h1>
+            <button type="button" class="hero-button">Order Service</button>
         </section>
-        <section>
-            <h2 hidden>Our Adventages</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+
+        <section class="advantages">
+            <h2 class="advantages-title" hidden>Our Advantages</h2>
+            <ul class="advantages-list">
+                <li class="advantages-item">
+                    <h3 class="advantages-heading">Strategy</h3>
+                    <p class="advantages-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                <li class="advantages-item">
+                    <h3 class="advantages-heading">Punctuality</h3>
+                    <p class="advantages-text">Bring the key message to the brand's audience for the best price within
+                        the
+                        shortest possible
                         time.</p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                <li class="advantages-item">
+                    <h3 class="advantages-heading">Diligence</h3>
+                    <p class="advantages-text">Research and confirm brands that present the strongest digital growth
+                        opportunities and minimize
                         risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
-                    </p>
+                <li class="advantages-item">
+                    <h3 class="advantages-heading">Technologies</h3>
+                    <p class="advantages-text">Design practice focused on digital experiences. We bring forth a deep
+                        passion
+                        for
+                        problem-solving.</p>
                 </li>
             </ul>
         </section>
 
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/mark-min.jpg" width="264" height="260" alt="mark guerrero">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+        <section class="team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-item">
+                    <img class="team-image" src="./images/mark-min.jpg" width="264" height="260" alt="Mark Guerrero">
+                    <h3 class="team-name">Mark Guerrero</h3>
+                    <p class="team-role">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/tom-min.jpg" width="264" height="260" alt="tom ford">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li class="team-item">
+                    <img class="team-image" src="./images/tom-min.jpg" width="264" height="260" alt="Tom Ford">
+                    <h3 class="team-name">Tom Ford</h3>
+                    <p class="team-role">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/camila-min.jpg" width="264" height="260" alt="camila garcia">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                <li class="team-item">
+                    <img class="team-image" src="./images/camila-min.jpg" width="264" height="260" alt="Camila Garcia">
+                    <h3 class="team-name">Camila Garcia</h3>
+                    <p class="team-role">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/daniel-min.jpg" width="264" height="260" alt="daniel wilson">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                <li class="team-item">
+                    <img class="team-image" src="./images/daniel-min.jpg" width="264" height="260" alt="Daniel Wilson">
+                    <h3 class="team-name">Daniel Wilson</h3>
+                    <p class="team-role">UI Designer</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Our Portfolio</h2>
-            <ul>
-                <li>
-                    <img src="./images/banking-app-min.jpg" width="360" height="300" alt="Banking App">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+
+        <section class="portfolio">
+            <h2 class="portfolio-title">Our Portfolio</h2>
+            <ul class="portfolio-list">
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/banking-app-min.jpg" width="360" height="300"
+                        alt="Banking App">
+                    <h3 class="portfolio-name">Banking App</h3>
+                    <p class="portfolio-category">App</p>
                 </li>
-                <li>
-                    <img src="./images/cashless-payment-min.jpg" width="360" height="300" alt="Cashless Payment">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/cashless-payment-min.jpg" width="360" height="300"
+                        alt="Cashless Payment">
+                    <h3 class="portfolio-name">Cashless Payment</h3>
+                    <p class="portfolio-category">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/meditation-app-min.jpg" width="360" height="300" alt="Meditation App">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/meditation-app-min.jpg" width="360" height="300"
+                        alt="Meditation App">
+                    <h3 class="portfolio-name">Meditation App</h3>
+                    <p class="portfolio-category">App</p>
                 </li>
-                <li>
-                    <img src="./images/taxi-service-min.jpg" width="360" height="300" alt="Taxi Service">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/taxi-service-min.jpg" width="360" height="300"
+                        alt="Taxi Service">
+                    <h3 class="portfolio-name">Taxi Service</h3>
+                    <p class="portfolio-category">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/screen-illustrations-min.jpg" width="360" height="300"
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/screen-illustrations-min.jpg" width="360" height="300"
                         alt="Screen Illustrations">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="portfolio-name">Screen Illustrations</h3>
+                    <p class="portfolio-category">Design</p>
                 </li>
-                <li>
-                    <img src="./images/online-courses-min.jpg" width="360" height="300" alt="Online Courses">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/online-courses-min.jpg" width="360" height="300"
+                        alt="Online Courses">
+                    <h3 class="portfolio-name">Online Courses</h3>
+                    <p class="portfolio-category">Marketing</p>
                 </li>
             </ul>
         </section>
+
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth
+    <footer class="footer">
+        <a class="footer-logo" href="./index.html"><span class="footer-color">Web</span>Studio</a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth
             solutions.</p>
     </footer>
 </body>
