--- a/index.html
+++ b/index.html
@@ -20,20 +20,24 @@
     <header class="header">
         <nav class="nav">
             <a class="nav-logo" href="./index.html">
-                <span class="nav-logo-kolor">Web</span>Studio</a>
+                <span class="nav-color-web">Web</span>
+                <span class="nav-color-studio">Studio</span>
+            </a>
             <ul class="nav-list">
-                <li class="nav-menu-item"><a class="nav-menu-link">Studio</a></li>
-                <li class="nav-menu-item"><a class="nav-menu-link">Portfolio</a></li>
-                <li class="nav-menu-item"><a class="nav-menu-link">Contacts</a></li>
+                <li class="nav-menu-item"><a href="./index.html" class="nav-menu-link">Studio</a></li>
+                <li class="nav-menu-item"><a href="" class="nav-menu-link">Portfolio
+                    </a></li>
+                <li class="nav-menu-item"><a href="" class="nav-menu-link">Contacts
+                    </a></li>
             </ul>
         </nav>
 
-        <address class="Contacts">
-            <ul class="Contacts-list">
-                <li class="Contacts-item">
+        <address class="contacts">
+            <ul class="contacts-list">
+                <li class="contacts-item">
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="Contacts-item">
+                <li class="contacts-item">
                     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
@@ -147,7 +151,8 @@
 
     </main>
     <footer class="footer">
-        <a class="footer-logo" href="./index.html"><span class="footer-color">Web</span>Studio</a>
+        <a class="footer-logo" href="./index.html"><span class="footer-color">Web</span>
+            <span>Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth
             solutions.</p>
