--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <header class="header">
         <nav class="nav">
             <a class="nav-logo" href="./index.html">
-                <span class="nav-color-web">Web</span>
-                <span class="nav-color-studio">Studio</span>
-            </a>
+                <span class="nav-color-web">Web</span>Studio</a>
             <ul class="nav-list">
                 <li class="nav-menu-item"><a href="./index.html" class="nav-menu-link">Studio</a></li>
                 <li class="nav-menu-item"><a href="" class="nav-menu-link">Portfolio
@@ -151,8 +149,8 @@
 
     </main>
     <footer class="footer">
-        <a class="footer-logo" href="./index.html"><span class="footer-color">Web</span>
-            <span>Studio</span></a>
+        <a class="footer-logo" href="./index.html"><span class="color-web">Web</span>
+            <span class="color-studio">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth
             solutions.</p>
