--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 
     </main>
     <footer class="footer">
-        <a class="footer-logo" href="./index.html"><span class="color-web">Web</span>
-            <span class="color-studio">Studio</span></a>
+        <a class="footer-logo" href="./index.html"><span class="footer-color-web">Web</span>
+            <span class="footer-color-studio">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth
             solutions.</p>
