--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a class="nav-logo" href="./index.html">
-                <span class="nav-color-web">Web</span>Studio</a>
+            <a class="nav-logo" href="./index.html">Web
+                <span class="nav-color-web">Studio</span></a>
             <ul class="nav-list">
                 <li class="nav-menu-item"><a href="./index.html" class="nav-menu-link">Studio</a></li>
                 <li class="nav-menu-item"><a href="" class="nav-menu-link">Portfolio
@@ -149,7 +149,7 @@
 
     </main>
     <footer class="footer">
-        <a class="footer-logo" href="./index.html"><span class="footer-color-web">Web</span>
+        <a class="footer-logo" href="./index.html">Web
             <span class="footer-color-studio">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth
