--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
             <a class="nav-logo" href="./index.html">Web
                 <span class="nav-color-web">Studio</span></a>
             <ul class="nav-list">
-                <li class="nav-menu-item"><a href="./index.html" class="nav-menu-link">Studio</a></li>
+                <li class="nav-menu-item"><a href="./index.html" class="nav-menu-link">Studio</a>
+                </li>
                 <li class="nav-menu-item"><a href="" class="nav-menu-link">Portfolio
-                    </a></li>
+                    </a>
+                </li>
                 <li class="nav-menu-item"><a href="" class="nav-menu-link">Contacts
-                    </a></li>
+                    </a>
+                </li>
             </ul>
         </nav>
 
