--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <a class="nav-logo" href="./index.html">Web
                 <span class="nav-color-web">Studio</span></a>
             <ul class="nav-list">
-                <li class="nav-menu-item"><a href="./index.html" class="nav-menu-link">Studio</a>
+                <li class="nav-menu-item"><a class="nav-menu-link" href="./index.html">Studio</a>
                 </li>
-                <li class="nav-menu-item"><a href="" class="nav-menu-link">Portfolio
+                <li class="nav-menu-item"><a class="nav-menu-link" href="">Portfolio
                     </a>
                 </li>
-                <li class="nav-menu-item"><a href="" class="nav-menu-link">Contacts
+                <li class="nav-menu-item"><a class="nav-menu-link" href="">Contacts
                     </a>
                 </li>
             </ul>
@@ -35,11 +35,11 @@
 
         <address class="contacts">
             <ul class="contacts-list">
-                <li class="contacts-item">
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li>
+                    <a class="contacts-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="contacts-item">
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <li>
+                    <a class="contacts-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
